--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>MERN TASK</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #ecf0f1;
+            color: #2c3e50;
         }
         h4, h5 {
             margin: 10px 0;
-            color: #2c3e50;
+            color: #34495e;
         }
         table {
             width: 100%;
@@ -22,24 +22,26 @@
             border-collapse: collapse;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            overflow: hidden;
         }
         th, td {
             padding: 12px;
             text-align: left;
-            border: 1px solid #ddd;
+            border-bottom: 1px solid #ddd;
         }
         th {
-            background-color: #3498db;
+            background-color: #2980b9;
             color: #fff;
         }
         tr:nth-child(even) {
-            background-color: #f2f2f2;
+            background-color: #f9f9f9;
         }
         tr:hover {
-            background-color: #ddd;
+            background-color: #dfe6e9;
         }
         a {
-            color: #3498db;
+            color: #2980b9;
             text-decoration: none;
         }
         a:hover {
@@ -57,13 +59,20 @@
             text-align: center;
             margin-bottom: 20px;
         }
+        .header h4 {
+            margin: 5px 0;
+        }
+        h5 {
+            border-left: 5px solid #2980b9;
+            padding-left: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h4>Name: Abrar Ahamed</h4>
-            <h4>REGNO: 21BCE2380</h4>
+            <h4>Name: Kreti Sridhar</h4>
+            <h4>REGNO: 21BCE0938</h4>
             <h4>Vit branch: VIT VELLORE</h4>
             <h4>2:30 - 4:30</h4>
         </div>
